--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -19,7 +19,14 @@
 }
 .user-photo-1
 {
-    @apply rounded-full object-cover border-gray-200 border -m-1 shadow-lg ;
+    @apply rounded-full object-cover border-gray-200 border -m-1 shadow-lg 
+}
+.table-th{
+    @apply px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider
+}
+.form-input
+{
+    @apply px-4 py-2 rounded-lg border border-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-200
 }
 @media(min-width:640px){
     .container{
